# robocupupm

./: .gitignore  README.md  package.xml
nav/: CMakeLists.txt
nav/config/rviz/: show.rviz
nav/dijkstra_planner/include/dijkstra_planner/: dijkstra.hpp
nav/dijkstra_planner/src/: dijkstra_node.cpp
nav/launch/: auto_slam.launch  move_base.launch
nav/nav/: package.xml
nav/nav/scripts/: realtimecoordination.py
nav/param/: base_local_planner_params.yaml  costmap_common_params.yaml
nav/scripts/: compute_path_client.py  getpose.py  path_listener.py
nav/srv/: Dijkstra.srv
navi/dijkstra_planner/config/: map.yaml  params.yaml
navi/nav/scripts/: bag.py  coor.py
navnew/devel/: .catkin  .rosinstall  _setup_util.py
navnew/devel/lib/dijkstra_planner/: dijkstra_node
navnew/devel/lib/pkgconfig/: dijkstra_planner.pc  nav.pc
navnew/devel/share/dijkstra_planner/cmake/: dijkstra_plannerConfig.cmake
navnew/devel/share/nav/cmake/: navConfig.cmake
navnew/src/dijkstra_planner/src/: dijkstra_planner.cpp
scripts/: compute_path_server.py  dijkstra_node.py  gopose.py
src/dijkstra_planner/: CMakeLists.txt  package.xml
src/dijkstra_planner/launch/: dijkstra_planner.launch  dijkstra_test.launch
src/dijkstra_planner/src/: dijkstra_from_yaml.cpp
src/nav/scripts/: initialpos.py
